# ApartmentsHunter

./: .gitignore  README.md  celerybeat-schedule.db  docker-compose.yml  init.js
apartments-hunter/: package-lock.json  package.json
apartments-hunter/public/: index.html
apartments-hunter/src/: App.js
apartments-hunter/src/components/forms/: FilterForm.js  LoginForm.js  RegisterForm.js
apartments-hunter/src/components/layout/: Footer.js  Navbar.js
apartments-hunter/src/components/routing/: PrivateRoute.js
apartments-hunter/src/contexts/: AuthContext.js
apartments-hunter/src/hooks/: useAuth.js
apartments-hunter/src/pages/: Dashboard.js  LoginPage.js  RegisterPage.js
apartments-hunter/src/services/: api.js
catalogue/: Dockerfile  pyproject.toml
catalogue/catalogue/: config.py  db.py  main.py  query.py
catalogue/catalogue/api/v1/endpoints/: apartment.py  apartments.py
catalogue/catalogue/resources/: cities.py  data.py  districts.py
catalogue/catalogue/schemas/: apartment.py  apartments.py
catalogue/tests/: conftest.py  test_apartments_endpoint.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
frontend/src/components/: ProtectedRoute.js
frontend/src/components/forms/: LoginForm.js  RegisterForm.js
frontend/src/components/layout/: Navbar.js
frontend/src/components/search/: ApartmentCard.js  SearchApartments.js
frontend/src/components/subscriptions/: SubscriptionCard.js
frontend/src/context/: AuthContext.js  ProtectedRoute.js
frontend/src/hooks/: useSubscriptions.js
frontend/src/pages/: AccountManagementPage.js  CreateSubscriptionPage.js  EditSubscriptionPage.js  HomePage.js  LoginPage.js  RegisterPage.js  ResetPasswordPage.js  SearchApartmentsPage.js  SubscriptionsPage.js
frontend/src/utils/: api.js
hunter/: Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
hunter/hunter/: celery_app.py  config.py  main.py  schemas.py
hunter/hunter/services/: details_scraper_service.py  offer_scraper_service.py  redis_service.py  scraper.py  scraper_service.py
hunter/hunter/tasks/: __init__.py  periodic_tasks.py
k8s/: README.md
k8s/hunter/deployments/: beat-deployment.yaml  worker-deployment.yaml
k8s/subscriptions/deployments/: postgres-deployment.yaml  web-deployment.yaml
k8s/subscriptions/secrets/: postgres-secret.yaml
k8s/subscriptions/services/: web-service.yaml
matcher/: Dockerfile  pyproject.toml
matcher/matcher/: celery_app.py  config.py  consumer.py  database.py  main.py  tasks.py  utils.py
pricer/: pyproject.toml
pricer/pricer/: celery_app.py  config.py  schemas.py  tasks.py
pricer/pricer/resources/: prompts.py
sender/: Dockerfile  pyproject.toml
sender/sender/: celery_app.py  config.py  tasks.py
sender/sender/services/: discord_service.py  email_service.py  telegram_service.py
sender/sender/templates/: apartment_notification.html  apartment_notification_discord  password_reset.html
sender/tests/: test_discord.py  test_telegram.py
subscriptions/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
subscriptions/alembic/: env.py
subscriptions/alembic/versions/: 07e5a41dea71_notification_endpoint.py  4fc8d02a0933_add_status.py  892d90ca37be_table_apartment.py  9bfb09604473_images_url.py  a02b40ec0805_removed_floor_level.py  c91c0be77dd2_initial.py  e7fa21242085_initial.py  e8286d157d21_destination.py  f31fbb0e98c4_user.py
subscriptions/subscriptions/: celery_app.py  config.py  database.py  main.py  models.py  tasks.py
subscriptions/subscriptions/api/v1/: dependencies.py
subscriptions/subscriptions/api/v1/endpoints/: subscriptions.py  users.py
subscriptions/subscriptions/core/: config.py  security.py
subscriptions/subscriptions/repository/: base.py  subscriptions.py  users.py
subscriptions/subscriptions/resources/: districts.py
subscriptions/subscriptions/schemas/: subscriptions.py  users.py
writer/: Dockerfile  pyproject.toml
writer/writer/: celery_app.py  config.py  db.py  events.py  main.py  schemas.py  tasks.py  worker.py
writer/writer/repositories/: apartments.py  base.py  offer_repository.py
writer/writer/tasks/: tasks.py
