[tool.poetry]
name = "catalogue"
version = "0.1.0"
description = ""
authors = ["GrzegorzPustulka <grzegorzpustulka@onet.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.8.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
fastapi = "^0.111.0"
subscriptions = { git = "https://github.com/GrzegorzPustulka/ApartmentsHunter.git", subdirectory = "subscriptions" }
discord = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
