[tool.poetry]
name = "hunter"
version = "0.1.0"
description = ""
authors = ["Grzegorz Pustułka <kontakt.pustulka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.4.0"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
requests = "^2.32.3"
bs4 = "^0.0.2"
redis = "^5.0.6"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
