[tool.poetry]
name = "matcher"
version = "0.1.0"
description = ""
authors = ["GrzegorzPustulka <grzegorzpustulka@onet.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.8.0"
redis = "^5.0.7"
celery = "^5.4.0"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
