[tool.poetry]
name = "pricer"
version = "0.1.0"
description = ""
authors = ["Grzegorz Pustulka <kontakt.pustulka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.4.0"
logging = "^0.4.9.6"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.4"
google-generativeai = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
