[tool.poetry]
name = "sender"
version = "0.1.0"
description = ""
authors = ["GrzegorzPustulka <grzegorzpustulka@onet.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.4.0"
redis = "^5.0.8"
celery = "^5.4.0"
pydantic = "^2.8.2"
email-validator = "^2.2.0"
secure-smtplib = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
