[tool.poetry]
name = "subscriptions"
version = "0.1.0"
description = ""
authors = ["Grzegorz Pustułka <kontakt.pustulka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.3"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
