[tool.poetry]
name = "writer"
version = "0.1.0"
description = ""
authors = ["GrzegorzPustulka <grzegorzpustulka@onet.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.4.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
redis = "^5.0.7"
pymongo = "^4.8.0"
bson = "^0.5.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
