[tool.poetry]
name = "writer"
version = "0.1.0"
description = ""
authors = ["GrzegorzPustulka <grzegorzpustulka@onet.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.4.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
redis = "^5.0.7"
sqlalchemy = "^2.0.32"
subscriptions = { git = "https://github.com/GrzegorzPustulka/ApartmentsHunter.git", subdirectory = "subscriptions" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
